canary/native-canary-rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: native-canary
spec:
  replicas: 5
  strategy:
    canary:
      canaryService: native-canary-preview
      steps:
      - setWeight: 20
      - pause: {}
      - setWeight: 40
      - pause: {duration: 10}
      - setWeight: 60
      - pause: {duration: 10}
      - setWeight: 80
      - pause: {duration: 10}
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: native-canary
  template:
    metadata:
      labels:
        app: native-canary
    spec:
      containers:
      - name: native-canary
        - env:
          - name: AWX_DATABASE_PASSWORD
            value: elA2OUdaWlc5T0NiU0JYYWhm
          - name: AWX_ID_REDIS_PASSWORD
            value: QWlyd2FsbGV
          - name: AWX_DATABASE_URL
            value: jdbc:postgresql://pgm-j6cls6qo9321nr02132790.pg.rds.aliyuncs.com:1921/validation
          - name: AWX_DATABASE_USERNAME
            value: validation_rw
          - name: AWX_ID_REDIS_ADDRESS
            value: r-j6c7847899d2e1a4.redis.rds.aliyuncs.com
          - name: AWX_ID_REDIS_PORT
            value: "6379"
          - name: AWx_ID_REDIS_DB
            value: "1"
          - name: SERVER_PORT
            value: "8080"
        image: asia.gcr.io/airwallex/app-validation-service:release-1.0.16
        imagePullPolicy: Always
        lifecycle:
          preStop:
            exec:
              command:
              - /bin/sh
              - -c
              - sleep 60
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /actuator/health/liveness
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 45
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
        ports:
        - containerPort: 8080
          name: main
          protocol: TCP
        - containerPort: 8081
          name: mgmt
          protocol: TCP
        - containerPort: 8082
          name: debug
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /actuator/health/readiness
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 45
          periodSeconds: 10
          successThreshold: 3
          timeoutSeconds: 5
        resources:
          limits:
            cpu: 2500m
            memory: 2Gi
          requests:
            cpu: 500m
            memory: 1Gi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        dnsPolicy: ClusterFirst
        enableServiceLinks: true
        restartPolicy: Always
        serviceAccount: default
        serviceAccountName: default
