canary/native-canary-preview-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: native-canary-preview
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
spec:
  rules:
  - host: native-canary-preview.poc.awx.onl
    http:
      paths:
      - backend:
          serviceName: native-canary-preview
          servicePort: http
        path: /
  tls:
  - hosts:
    - native-canary-preview.poc.awx.onl
    secretName: tls-cert-native-canary-preview
